--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="">
-    <h1>
-        Dating App
-    </h1>
-    <app-value></app-value>
-</div>
+<app-nav></app-nav>
+<app-home></app-home>
+
+
 
